--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus, Version=4.1.0.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>packages\EPPlus.4.1.0\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,14 +45,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Advanced\LINQ\01.Students By Group.cs" />
+    <Compile Include="Advanced\LINQ\02.Students By First And Last Name.cs" />
+    <Compile Include="Advanced\LINQ\03.Students By Age.cs" />
+    <Compile Include="Advanced\LINQ\04.Sort Students.cs" />
+    <Compile Include="Advanced\LINQ\05.Filter Students By Email Domain.cs" />
+    <Compile Include="Advanced\LINQ\06.Filter Students By Phone.cs" />
+    <Compile Include="Advanced\LINQ\07.Excellent Students.cs" />
+    <Compile Include="Advanced\LINQ\08.Weak Students.cs" />
+    <Compile Include="Advanced\LINQ\09.Students Enrolled In 2014 Or 2015.cs" />
+    <Compile Include="Advanced\LINQ\10.Group By Group.cs" />
+    <Compile Include="Advanced\LINQ\11.Students Joined To Specialties WITH CLASSES.cs" />
+    <Compile Include="Advanced\LINQ\11.Students Joined To Specialties WITHOUT CLASSES.cs" />
+    <Compile Include="Advanced\LINQ\12.Little John.cs" />
+    <Compile Include="Advanced\LINQ\13.Office Stuff.cs" />
+    <Compile Include="Advanced\LINQ\14.Export To Excel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Advanced\LINQ\00.CSharp-Advanced-LINQ-Exercises.docx" />
+    <None Include="Advanced\LINQ\00.PackagesCONFIG for 14.json" />
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Advanced\" />
+    <Content Include="Advanced\LINQ\00.StudentData.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
