stacks, queues, sets and dictionaries

--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -60,6 +60,33 @@
     <Compile Include="Advanced\LINQ\12.Little John.cs" />
     <Compile Include="Advanced\LINQ\13.Office Stuff.cs" />
     <Compile Include="Advanced\LINQ\14.Export To Excel.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\01.UniqueUsernames.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\02.SetsOfElements.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\03.PeriodicTable.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\04.CountSymbols.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\05.Phonebook.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\06.AMinersTask.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\07.FixEmails.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\08.HandsOfCards.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\09.UserLogs.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\10.PopulationCounter.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\11.LogsAggregator.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\12.LegendaryFarming.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\13.SrabskoUnleashed.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\14.DragonArmy.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\15.RubiksMatrix.cs" />
+    <Compile Include="Advanced\SetsAndDictionaries\16.TargetPractice.cs" />
+    <Compile Include="Advanced\StacksAndQueues\01.ReverseNumbers.cs" />
+    <Compile Include="Advanced\StacksAndQueues\02.BasicStackOperations.cs" />
+    <Compile Include="Advanced\StacksAndQueues\03.MaximumElement.cs" />
+    <Compile Include="Advanced\StacksAndQueues\04.BasicQueueOperations.cs" />
+    <Compile Include="Advanced\StacksAndQueues\05.SequenceWithQueue.cs" />
+    <Compile Include="Advanced\StacksAndQueues\06.TruckTour.cs" />
+    <Compile Include="Advanced\StacksAndQueues\07.BalancedParentheses.cs" />
+    <Compile Include="Advanced\StacksAndQueues\08.RecursiveFibonacci.cs" />
+    <Compile Include="Advanced\StacksAndQueues\09.StackFibonacci.cs" />
+    <Compile Include="Advanced\StacksAndQueues\10.SimpleTextEditor.cs" />
+    <Compile Include="Advanced\StacksAndQueues\11.PoisonousPlants.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
