--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -77,6 +77,13 @@
     <Compile Include="Advanced\ManualStringProcessing\14.LettersChangeNumbers.cs" />
     <Compile Include="Advanced\ManualStringProcessing\15.MelrahShake.cs" />
     <Compile Include="Advanced\ManualStringProcessing\16.ExtractHyperlinks.cs" />
+    <Compile Include="Advanced\RegularExpressions\01.MatchFullName.cs" />
+    <Compile Include="Advanced\RegularExpressions\02.MatchPhoneNumber.cs" />
+    <Compile Include="Advanced\RegularExpressions\03.SeriesOfNumbers.cs" />
+    <Compile Include="Advanced\RegularExpressions\04.ReplaceATag.cs" />
+    <Compile Include="Advanced\RegularExpressions\05.ExtractEmail.cs" />
+    <Compile Include="Advanced\RegularExpressions\06.SentenceExtractor.cs" />
+    <Compile Include="Advanced\RegularExpressions\07.ValidUsernames.cs" />
     <Compile Include="Advanced\SetsAndDictionaries\01.UniqueUsernames.cs" />
     <Compile Include="Advanced\SetsAndDictionaries\02.SetsOfElements.cs" />
     <Compile Include="Advanced\SetsAndDictionaries\03.PeriodicTable.cs" />
