--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -89,6 +89,8 @@
     <Compile Include="Advanced\RegularExpressions\05.ExtractEmail.cs" />
     <Compile Include="Advanced\RegularExpressions\06.SentenceExtractor.cs" />
     <Compile Include="Advanced\RegularExpressions\07.ValidUsernames.cs" />
+    <Compile Include="Advanced\RegularExpressions\08.ExtractHyperlinks.cs" />
+    <Compile Include="Advanced\RegularExpressions\09.QueryMess.cs" />
     <Compile Include="Advanced\RegularExpressions\Lab\1.MatchCount.cs" />
     <Compile Include="Advanced\RegularExpressions\Lab\2.VowelCount.cs" />
     <Compile Include="Advanced\RegularExpressions\Lab\3.NonDigitCount.cs" />
