additional exercises and refactor

--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -162,23 +162,60 @@
     <Compile Include="Advanced\StacksAndQueues\09.StackFibonacci.cs" />
     <Compile Include="Advanced\StacksAndQueues\10.SimpleTextEditor.cs" />
     <Compile Include="Advanced\StacksAndQueues\11.PoisonousPlants.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\01.DefineAClassPerson.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\02.CreatingConstructors.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\03.OpinionPoll.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\04.CompanyRoster.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\05.SpeedRacing.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\06.RawData.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\07.CarSalesman.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\09.Google.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\10.FamilyTree.cs" />
-    <Compile Include="OOP\Basics\DefiningClasses\11.CatLady.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\01.DefineAClassPerson\01.DefineAClassPerson.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\01.DefineAClassPerson\Person.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\02.CreatingConstructors\02.CreatingConstructors.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\02.CreatingConstructors\Person.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\03.OldestFamilyMember\Family.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\03.OldestFamilyMember\Person.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\04.OpinionPoll\04.OpinionPoll.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\04.OpinionPoll\Person.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\05.DateModifier\DateModifier.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\06.CompanyRoster\06.CompanyRoster.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\05.DateModifier\05.DateModifier.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\06.CompanyRoster\Employee.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\07.SpeedRacing\07.SpeedRacing.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\07.SpeedRacing\Car.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\08.RawData\08.RawData.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\08.RawData\Car.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\08.RawData\Cargo.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\08.RawData\Tire.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\09.RectangleIntersection\Point.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\09.RectangleIntersection\Rectangle.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\10.CarSalesman\10.CarSalesman.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\10.CarSalesman\Car.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\10.CarSalesman\Engine.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\11.PokemonTrainer\Pokemon.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\11.PokemonTrainer\Trainer.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\12.Google\12.Google.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\12.Google\Car.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\12.Google\Child.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\12.Google\Company.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\12.Google\Parent.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\12.Google\Person.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\12.Google\Pokemon.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\13.FamilyTree\13.FamilyTree.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\13.FamilyTree\FamilyTree.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\13.FamilyTree\Person.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\14.CatLady\14.CatLady.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\14.CatLady\Cat.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\14.CatLady\Cymric.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\14.CatLady\Siamese.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\14.CatLady\StreetExtraordinaire.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\15.DrawingTool\15.DrawingTool.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\15.DrawingTool\CorDraw.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\15.DrawingTool\Figure.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\15.DrawingTool\Rectangle.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\15.DrawingTool\Square.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Compile Include="OOP\Basics\DefiningClasses\08.PokemonTrainer.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\11.PokemonTrainer\11.PokemonTrainer.cs" />
     <None Include="OOP\Basics\DefiningClasses\01. CSharp-OOP-Basics-Defining-Classes-Exercises.docx" />
+    <Compile Include="OOP\Basics\DefiningClasses\03.OldestFamilyMember\03.OldestFamilyMember.cs" />
+    <Compile Include="OOP\Basics\DefiningClasses\09.RectangleIntersection\09.RectangleIntersection.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
