--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -207,6 +207,24 @@
     <Compile Include="OOP\Basics\DefiningClasses\15.DrawingTool\Figure.cs" />
     <Compile Include="OOP\Basics\DefiningClasses\15.DrawingTool\Rectangle.cs" />
     <Compile Include="OOP\Basics\DefiningClasses\15.DrawingTool\Square.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\1.ClassBox\1.ClassBox.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\1.ClassBox\Box.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\2.ClassBoxDataValidation\2.ClassBoxDataValidation.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\2.ClassBoxDataValidation\Box.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\3.AnimalFarm\3.AnimalFarm.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\3.AnimalFarm\Chicken.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\4.ShoppingSpree\4.ShoppingSpree.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\4.ShoppingSpree\Person.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\4.ShoppingSpree\Product.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\5.PizzaCalories\5.PizzaCalories.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\5.PizzaCalories\Dough.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\5.PizzaCalories\Ingredient.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\5.PizzaCalories\Pizza.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\5.PizzaCalories\Topping.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\6.FootballTeamGenerator\6.FootballTeamGenerator.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\6.FootballTeamGenerator\Player.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\6.FootballTeamGenerator\Skill.cs" />
+    <Compile Include="OOP\Basics\Encapsulation\6.FootballTeamGenerator\Team.cs" />
     <Compile Include="OOP\Basics\Inheritance\1.Person\1.Person.cs" />
     <Compile Include="OOP\Basics\Inheritance\1.Person\Child.cs" />
     <Compile Include="OOP\Basics\Inheritance\1.Person\Person.cs" />
@@ -260,6 +278,7 @@
     <None Include="OOP\Basics\DefiningClasses\01. CSharp-OOP-Basics-Defining-Classes-Exercises.docx" />
     <Compile Include="OOP\Basics\DefiningClasses\03.OldestFamilyMember\03.OldestFamilyMember.cs" />
     <Compile Include="OOP\Basics\DefiningClasses\09.RectangleIntersection\09.RectangleIntersection.cs" />
+    <None Include="OOP\Basics\Encapsulation\CSharp-OOP-Basics-Encapsulation-Exercises.docx" />
     <None Include="OOP\Basics\Inheritance\03.CSharp-OOP-Basics-Inheritance-Exercises.docx" />
     <None Include="packages.config" />
   </ItemGroup>
