Completed previous exam task, System Split, from July 2016

--- a/Csharp/Csharp.csproj
+++ b/Csharp/Csharp.csproj
@@ -225,6 +225,22 @@
     <Compile Include="OOP\Basics\Encapsulation\6.FootballTeamGenerator\Player.cs" />
     <Compile Include="OOP\Basics\Encapsulation\6.FootballTeamGenerator\Skill.cs" />
     <Compile Include="OOP\Basics\Encapsulation\6.FootballTeamGenerator\Team.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Components\Dump.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Components\ExpressSoftware.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Components\Hardware.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Components\HeavyHardware.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Components\LightSoftware.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Components\PowerHardware.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Components\Software.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Executor.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Extractor.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Factories\HardwareFactory.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Factories\SoftwareFactory.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\Fetcher.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\IComponent.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\IFactory.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\SystemSplitMain.cs" />
+    <Compile Include="OOP\Basics\ExamPrep\SystemSplit\System.cs" />
     <Compile Include="OOP\Basics\Inheritance\1.Person\1.Person.cs" />
     <Compile Include="OOP\Basics\Inheritance\1.Person\Child.cs" />
     <Compile Include="OOP\Basics\Inheritance\1.Person\Person.cs" />
